# apps/api/app/models/current.rb
@@ -1,0 +1,3 @@
+class Current < ActiveSupport::CurrentAttributes
+  attribute :request_id, :trace_id, :actor_id
+end
